--- a/src/flock_simulator/CMakeLists.txt
+++ b/src/flock_simulator/CMakeLists.txt
@@ -3,11 +3,34 @@ project(flock_simulator)
 
 find_package(catkin REQUIRED COMPONENTS
   rospy
+  std_msgs
+  geometry_msgs
+  message_generation
 )
+
+ add_message_files(
+   FILES
+   dynamics.msg
+   fleetplan.msg
+   path.msg
+   fleetplan.msg
+   state.msg
+ )
 
 catkin_python_setup()
 
-catkin_package()
+ generate_messages(
+   DEPENDENCIES
+   std_msgs
+   geometry_msgs
+ )
+
+catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES flock_simulator
+  CATKIN_DEPENDS rospy std_msgs message_runtime geometry_msgs
+#  DEPENDS system_lib
+)
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
