--- a/src/flock_simulator/CMakeLists.txt
+++ b/src/flock_simulator/CMakeLists.txt
@@ -8,21 +8,21 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
 )
 
- add_message_files(
-   FILES
-   FlockState.msg
-   Fleetplan.msg
-   Path.msg
-   Dynamics.msg
- )
+add_message_files(
+  FILES
+  FlockState.msg
+  FlockCommand.msg
+  DuckieState.msg
+  DuckieCommand.msg
+)
 
 catkin_python_setup()
 
- generate_messages(
-   DEPENDENCIES
-   std_msgs
-   geometry_msgs
- )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  geometry_msgs
+)
 
 catkin_package(
 #  INCLUDE_DIRS include
