--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ out/
 /cfg/*.py
 
 #files changed after catkin_make
-src/CMakeLists.txt
-src/duckietown-visualization
+/src/CMakeLists.txt
+/src/duckietown-visualization
 
 CATKIN_IGNORE
