--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ workflows:
       #- test-3.5
       # - test-2.7
       - melodic
+        requires:
+          - test: python
 jobs:
   test-3.6: &test-template
     environment:
@@ -26,10 +28,13 @@ jobs:
             cd duckietown-world
             pip install -r requirements.txt
             python setup.py develop --no-deps
+  python:
+    docker:
+      - image: python:2.7
   melodic:
     <<: *test-template
     docker:
-      - image: shadowrobot/build-tools:xenial-kinetic
+      - image: autonomoustuff/docker-builds:melodic-ros-base
   test-3.5:
     <<: *test-template
     docker:
