--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
       #- test-3.6
       #- test-3.5
       # - test-2.7
-      - melodic
+      - melodic:
         requires:
           - test: python
 jobs:
