--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,8 @@ jobs:
   python:
     docker:
       - image: python:2.7
+    steps:
+      - checkout
   melodic:
     <<: *test-template
     docker:
