--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ workflows:
       #- test-3.5
       # - test-2.7
       - melodic:
-        requires:
+        - requires:
           - python
 jobs:
   test-3.6: &test-template
