--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ workflows:
       #- test-3.5
       # - test-2.7
       - melodic:
-        - requires:
-          - python
+          requires:
+            - python
 jobs:
   test-3.6: &test-template
     environment:
