--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,13 @@ workflows:
   version: 2
   test:
     jobs:
-      - python
+      #- melodic
       #- test-3.7
       #- test-3.6
       #- test-3.5
-      # - test-2.7
-      - melodic:
+      - test-2.7:
           requires:
-            - python
+            - melodic
 jobs:
   test-3.6: &test-template
     environment:
@@ -29,13 +28,7 @@ jobs:
             cd duckietown-world
             pip install -r requirements.txt
             python setup.py develop --no-deps
-  python:
-    docker:
-      - image: python:2.7
-    steps:
-      - checkout
   melodic:
-    <<: *test-template
     docker:
       - image: autonomoustuff/docker-builds:melodic-ros-base
   test-3.5:
