Implementing CircleCI with ROS

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ workflows:
   version: 2
   test:
     jobs:
-      #- melodic
+      - melodic
       #- test-3.7
       #- test-3.6
       #- test-3.5
