--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
       - run:
           name: Build duckietown-fplan
           command: |
+            cd src
             pwd
   melodic:
     docker:
