--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,12 @@ jobs:
             cd ..
             catkin init
             catkin config --extend /opt/ros/$ROS_DISTRO
+      - run:
+          name: Build
+          command: |
+            cd ..
+            catkin build
+    working_directory: ~/src
   test-3.5:
     <<: *test-template
     docker:
