Implementing CircleCI with ROS

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,11 +45,34 @@ jobs:
       - run:
           name: Build duckietown-fplan
           command: |
+            pwd
             ls
+            cd src
+            pwd
+            ls
+            cd ..
             cd ..
             pwd
             ls
             catkin build
+      - test-results-store:
+          path: out-comptests/junit
+
+      - store_artifacts:
+          path: out-comptests/duckietown_world_tests
+          destination: duckietown_world_tests
+          
+      - store_artifacts:
+          path: artifacts
+          destination: artifacts
+
+      - store_artifacts:
+          path: out_coverage
+          destination: coverage
+
+      - store_artifacts:
+          path: notebooks
+          destination: notebooks
     working_directory: ~/src
   test-3.5:
     <<: *test-template
