--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
       #- test-3.6
       #- test-3.5
       - test-2.7
-      - melodic
+      - melodic:
           requires:
             - test-2.7
 jobs:
