--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             catkin build >> test_results.txt
       - store_artifacts:
           path: ~/test_results.txt
-          destination: test
+          destination: test/test_results.txt
     working_directory: ~/src
   test-3.5:
     <<: *test-template
